--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "packages/workers/*"
   ],
   "scripts": {
-    "fmt": "prettier -w ."
+    "fmt": "prettier -w .",
+    "build:signup-flow": "esbuild packages/signup-flow/src/index.js --bundle --format=iife --global-name=AnvisningerSignupFlow --outfile=dist/signup-flow.js"
   },
   "devDependencies": {
+    "esbuild": "^0.27.3",
     "prettier": "^3.0.0"
   }
 }
