--- a/packages/signup-flow/package.json
+++ b/packages/signup-flow/package.json
@@ -5,6 +5,6 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "build": "node ../../scripts/build-frontend.mjs"
+    "build": "node ../../scripts/build-signup-flow.mjs"
   }
 }
